layout basico feito

--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>DEVinBank</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" async></script>
 </head>
 <body>
 
+<header class="cabecalho">
+    <img src="images/favicon.png" alt="Logo do Banco" class="banner" height="128px">
+    <h1>DEVinBank</h1>
+</header>
+
+<main class="principal">
+    <h1>main</h1>
+
+</main>
+<footer class="rodape">
+    <p>Texto do rodape aqui</p>
+    <p>Dados da empresa</p>
+</footer>
 </body>
 
 
