--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <input id="conta" type="number" required>
             </div>
             <div>
-                <label for="senha-op">Senha</label>
-                <input id="senha-op" type="password" required>
+                <label for="senhaop">Senha</label>
+                <input id="senhaop" type="password" required>
             </div>
             <div class="botoes">
                 <button type="submit" class="botao">
